# nn_tilde

./: .gitignore  .gitmodules  README.md  build-nn_tilde-macos-brew.sh  debug.maxpat  package-info.json.in  pd-osx-deps.sh  requirements.txt  requirements_darwin_x64.txt  setup.py
.github/workflows/: build-macos-arm64.yaml  build-macos-x86_64.yaml  build-macos.yaml  build.yaml  python-publish.yaml  python-publish.yaml.disabled
extras/: 01_nn_attributes.maxpat  generate_dumb_model.py  generate_test_model.py
install/: MaxAPI.lib  archlinux+arm.sh  dylib_fix.py  linux.sh  macos_arm64.sh  macos_makeub.sh  macos_max_makeub.sh  macos_pd_makeub.sh  macos_x86_64.sh  max-linker-flags.txt  mkl.cmake  patch_with_vst.sh  raspberrypi.sh
python_tools/: __init__.py  buffer.py  codegen.py  module.py
python_tools/templates/: __init__.py  attributes.py  buffers.py
python_tools/test/: test_attributes.maxpat  test_attributes.py  test_buffer_attributes.maxpat  test_buffers.py  test_dump.maxpat  test_list_attributes.maxpat  utils.py
python_utils/: __init__.py
scrips/: BUILD_APPLE.sh
scripting/: README.md  effects.py  effects.ts  features.py  features.ts  scripting.maxpat
src/: CMakeLists.txt  otool_fix.sh
src/backend/: CMakeLists.txt  backend.cpp  backend.h  logger.h  parsing_utils.cpp  parsing_utils.h
src/cmake/: add_torch.cmake
src/extras/: nn~ Overview.maxpat
src/frontend/maxmsp/jit.nn/: CMakeLists.txt  debug.py  jit.nn.cpp  shared_matrix_transform.py  shared_tensor.cpp  shared_tensor.hpp
src/frontend/maxmsp/mc.bnn_tilde/: CMakeLists.txt  mc.bnn_tilde.cpp
src/frontend/maxmsp/mc.nn_tilde/: CMakeLists.txt  mc.nn_tilde.cpp
src/frontend/maxmsp/mcs.nn_tilde/: CMakeLists.txt  mcs.nn_tilde.cpp
src/frontend/maxmsp/nn.info/: CMakeLists.txt  nn.info.cpp
src/frontend/maxmsp/nn_tilde/: CMakeLists.txt  circular_buffer.cpp  circular_buffer.h  nn_tilde.cpp  nn_tilde_test.cpp  nn~.maxhelp
src/frontend/maxmsp/shared/: array_tools.h  base_obj.h  buffer_tools.h  circular_buffer.h  dict_utils.h  max_logger.h  max_model_download.h  nn_base.h
src/frontend/puredata/nn_tilde/: CMakeLists.txt  nn_tilde.cpp  nn~-help.pd
src/frontend/puredata/shared/: pd_buffer_manager.h  pd_model_download.h
src/help/: mc.nn~.maxhelp  mcs.nn~.maxhelp  nn.info.maxhelp  nn~.maxhelp
src/models/: demo_attributes.ts  demo_buffers.ts  demo_mc.ts  effects.ts  features.ts  wavetable.ts  wheel.ts
src/patchers/: after_help.maxpat  help_hub.maxpat  rave_help.maxpat  ts_help.maxpat  vschaos_help.maxpat
src/patchers/latent_remote/: M4L.latent_remote.js  M4L.latent_remote.maxpat  M4L.latent_slider.maxhelp  M4L.latent_slider.maxpat  M4L.latent_slider_component.maxpat  frand.maxpat  ierf.gendsp  latent_remote.js  latent_remote.maxhelp  latent_remote.maxpat  latent_slider.maxpat  latent_slider_component.maxpat
src/shared/: circular_buffer.h  model_download.h  static_buffer.h
src/source/: attributes.py  buffers.py  effects.py  features.py  unmix.py
